<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity"
    android:background="@color/colorTextFour">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:background="@color/colorTextFive"
            tools:ignore="ContentDescription,SmallSp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textSize="20sp"
            android:paddingTop="8sp"
            android:paddingBottom="8sp"
            android:text="@string/virtual_reality_samples"
            android:textColor="@color/colorTextTwo"
            android:gravity="center"
            android:id="@+id/test_name"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2sp"
            android:background="@color/colorTextThree"
            tools:ignore="ContentDescription,SmallSp" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10sp">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12sp"
                    android:layout_marginBottom="12sp"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp"
                    app:cardCornerRadius="15sp"
                    app:cardBackgroundColor="@color/primary_new_light"
                    app:cardElevation="0sp"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:layout_marginLeft="13sp"
                        android:layout_marginRight="13sp"
                        android:layout_marginBottom="5sp"
                        android:layout_marginTop="5sp"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:text="@string/choose_scene_to_view_in_vr"/>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="200sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginBottom="10sp"
                    app:cardElevation="5sp"
                    android:id="@+id/store_near_sea_card">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorTextFive"
                            android:id="@+id/store_near_sea"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:textSize="18sp"
                            android:paddingTop="8sp"
                            android:paddingBottom="8sp"
                            android:text="@string/store_near_the_sea"
                            android:textColor="@color/colorTextTwo"
                            android:gravity="center"
                            android:layout_gravity="bottom"/>

                    </FrameLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="200sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginBottom="10sp"
                    app:cardElevation="5sp"
                    android:id="@+id/sunrise_in_open_card">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorTextFive"
                            android:id="@+id/sunrise_in_open"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:textSize="18sp"
                            android:paddingTop="8sp"
                            android:paddingBottom="8sp"
                            android:text="@string/sunrise_in_open"
                            android:textColor="@color/colorTextTwo"
                            android:gravity="center"
                            android:layout_gravity="bottom"/>

                    </FrameLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="200sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginBottom="10sp"
                    app:cardElevation="5sp"
                    android:id="@+id/night_time_beauty_card">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorTextFive"
                            android:id="@+id/night_time_beauty"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:textSize="18sp"
                            android:paddingTop="8sp"
                            android:paddingBottom="8sp"
                            android:text="@string/night_time_beauty"
                            android:textColor="@color/colorTextTwo"
                            android:gravity="center"
                            android:layout_gravity="bottom"/>

                    </FrameLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="200sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginBottom="10sp"
                    app:cardElevation="5sp"
                    android:id="@+id/greenery_at_shore_card">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorTextFive"
                            android:id="@+id/greenery_at_shore"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:textSize="18sp"
                            android:paddingTop="8sp"
                            android:paddingBottom="8sp"
                            android:text="@string/greenery_at_the_shore"
                            android:textColor="@color/colorTextTwo"
                            android:gravity="center"
                            android:layout_gravity="bottom"/>

                    </FrameLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="200sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginBottom="10sp"
                    app:cardElevation="5sp"
                    android:id="@+id/ways_to_go_card">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorTextFive"
                            android:id="@+id/ways_to_go"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:textSize="18sp"
                            android:paddingTop="8sp"
                            android:paddingBottom="8sp"
                            android:text="@string/ways_to_go"
                            android:textColor="@color/colorTextTwo"
                            android:gravity="center"
                            android:layout_gravity="bottom"/>

                    </FrameLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>